# fermi-notifier

./: Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
src/: config.rs  error.rs  gemini.rs  main.rs  ntfy.rs
